--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -150,3 +150,27 @@
   font-style: italic;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/inter-variable-italic.ttf") format("truetype-variations");
+  font-weight: 100 900;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/inter-variable-normal.ttf") format("truetype-variations");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oxanium";
+  src: url("/fonts/oxanium-variable-normal.ttf") format("truetype-variations");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
